--- a/src/app/components/mb-message-thread/mb-message-thread.component.css
+++ b/src/app/components/mb-message-thread/mb-message-thread.component.css
@@ -94,11 +94,11 @@ mat-icon {
     margin-left: 50px;
   }
 
-  .subscriber h3 {
+  .subscribers-container h3 {
     margin-bottom: 0;
   }
 
-  .subscriber p {
+  .subscribers-container p {
     font-size: 15px;
     -webkit-margin-before: 2px;
   }
