feat: Add path to button to add/remove subscribers

--- a/src/app/components/mb-message-thread/mb-message-thread.component.html
+++ b/src/app/components/mb-message-thread/mb-message-thread.component.html
@@ -44,7 +44,7 @@
       <div class="user-details">
         <div class="user-image"><img src="http://via.placeholder.com/35x35" alt="" /></div>
         <div class="button-column">
-          <button class="btn-people" mat-raised-button color="basic" routerLink="/{{user?.id}}/messageboard/{{messageboard?.id}}/new">Add/remove people...</button>
+          <button class="btn-people" mat-raised-button color="basic" routerLink="/{{user?.id}}/messages/{{mbpost?.id}}/subscribers/edit">Add/remove people...</button>
         </div>
       </div>
     </div>
