--- a/src/app/components/mb-message-subscribers/mb-message-subscribers.component.html
+++ b/src/app/components/mb-message-subscribers/mb-message-subscribers.component.html
@@ -1,3 +1,34 @@
-<p>
-  mb-message-subscribers works!
-</p>
+<div class="section" *ngIf="project">
+  <h3 class="header"><span><a routerLink="/{{user?.id}}/projects/{{project?.id}}">{{project.name}} HQ</a> ></span>
+    <span><a routerLink="/{{user?.id}}/projects/{{project?.id}}/messageboards/{{messageboard?.id}}">Message Board</a> > </span>
+    <span><a routerLink="/{{user?.id}}/messages/{{mbpost?.id}}"><mat-icon aria-label="announcement" matTooltip="Announcement">announcement</mat-icon>{{mbpost?.title}}</a></span></h3>
+</div>
+<div>
+  <h3 class='notifications'>Who should be notified about comments on this message?</h3>
+  <a>Select Everyone</a> • <a>Select no one</a>
+</div>
+<div class="action-row">
+  <h3 class="project-name">{{project.name}}</h3>
+  <div class="user-details">
+    <div class="user-image"><img src="http://via.placeholder.com/40x40" alt="" /></div>
+    <div class="button-column">
+      <button class="btn-add" mat-raised-button color="accent" routerLink="/{{user?.id}}/messageboard/{{messageboard?.id}}/new">Add a comment or a file...</button>
+    </div>
+  </div>
+</div>
+<div class="subscriber" *ngIf="mbpost">
+  <div class="subscribers-container" *ngIf="mbpost.author == user?.id">
+    <h3>Subscribers</h3>
+    <p>
+    {{mbpost?.subscribers.length}} person will be notified when someone comments on this message.
+    </p>
+    <div class="action-row">
+      <div class="user-details">
+        <div class="user-image"><img src="http://via.placeholder.com/35x35" alt="" /></div>
+        <div class="button-column">
+          <button class="btn-people" mat-raised-button color="basic" routerLink="/{{user?.id}}/messages/{{mbpost?.id}}/subscribers/edit">Add/remove people...</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
