refactor: Change input to app-todo-input

--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -10,7 +10,7 @@
   <h2>To-dos</h2>
 </div>
 
-<app-mb-message-input *ngIf="mbposts?.length == 0"></app-mb-message-input>
-<app-mb-messages *ngIf="mbposts?.length > 0"></app-mb-messages>
+<app-todo-input *ngIf="todos?.length == 0"></app-todo-input>
+<!-- <app-mb-messages *ngIf="todos?.length > 0"></app-mb-messages> -->
 
 <app-todo-input></app-todo-input>
