--- a/src/app/components/todos-list/todos-list.component.css
+++ b/src/app/components/todos-list/todos-list.component.css
@@ -63,8 +63,17 @@ button {
 }
 
 .mat-card-title h3 {
+  float: left;
   text-align: left;
   margin: 0;
+}
+
+.todo-header-image {
+  margin-left: 5px;
+}
+
+mat-card-title {
+  white-space: nowrap;
 }
 
 .mat-card-subtitle {
