style: 'link' and 'vert-padding' classes

--- a/src/app/components/todos-list/todos-list.component.css
+++ b/src/app/components/todos-list/todos-list.component.css
@@ -1,10 +1,12 @@
+/* 
 p {
   color: #877457;
+  font-style: italic;
 }
 
 p span {
   color: black;
-}
+} */
 
 h2, h3, .drafts-container {
   text-align: center;
@@ -12,6 +14,10 @@ h2, h3, .drafts-container {
 
 h3 span {
   font-weight: lighter;
+}
+
+.link {
+  text-decoration: underline;
 }
 
 mat-list-item {
@@ -24,16 +30,19 @@ mat-list-item {
 }
 
 .button-row {
-  display: flex;
+  /* display: flex; */
   text-align: center;
+  /* margin: 0;
+  white-space: nowrap;
+  text-align: center; */
 }
 
 button {
   border-radius: 2rem;
 }
 
-.drafts-container {
-  margin: 10px auto 20px;
+.vert-padding {
+  height: 20px;
 }
 
 >>>.mat-form-field-label, >>>.mat-select-value-text {
@@ -57,6 +66,14 @@ button {
   background: none;
 }
 
+.mat-card-title {
+  order: 1;
+}
+
+.mat-card-subtitle {
+  order: 3;
+}
+
 .mat-card-header-text {
   color: black;
   margin: 0;
@@ -70,6 +87,7 @@ button {
 
 .todo-header-image {
   margin-left: 5px;
+  order: 2;
 }
 
 mat-card-title {
@@ -90,7 +108,9 @@ button, .form-wrapper {
 }
 
 .mat-card-content {
-  margin-left: 46px;
+  /* margin-left: 46px; */
+  color: grey;
+  font-style: italic;
 }
 
 .buttons-container {
@@ -98,94 +118,7 @@ button, .form-wrapper {
   white-space: nowrap;
   text-align: center;
 }
-p {
-  color: #877457;
-}
 
-p span {
-  color: black;
-}
-
-h2, h3, .todo-container {
-  text-align: center;
-}
-
-h3 span {
-  font-weight: lighter;
-}
-
-mat-list-item {
-  color: black !important;
-}
-
-.section {
-  color: black;
-  width: 100%;
-}
-
-.button-row {
-  display: flex;
-  text-align: center;
-}
-
-button {
-  border-radius: 2rem;
-}
-
-.todos-container {
-  margin: 10px auto 20px;
-}
-
->>>.mat-form-field-label, >>>.mat-select-value-text {
-  color: black !important;
-}
-
->>>.mat-list-item-content {
-  padding: 0 !important;
-}
-
-.mat-form-field {
-  width: 50%;
-}
-
-.mat-list-item:not(:last-child) {
-  margin-bottom: 50px;
-}
-
-.mat-card {
-  color: black;
-  background: none;
-}
-
-.mat-card-header-text {
-  color: black;
-  margin: 0;
-}
-
-.mat-card-title h3 {
-  text-align: left;
-  margin: 0;
-}
-
-.mat-card-subtitle {
-  color: #877457;
-}
-
-button, .form-wrapper {
-  margin: 0 5px;
-}
-
-.todo-card {
-  padding: 6px;
-  width: 100%;
-}
-
-.mat-card-content {
-  margin-left: 46px;
-}
-
-.buttons-container {
-  margin: 0;
-  white-space: nowrap;
-  text-align: center;
+.button {
+  color: white;
 }
