fix: Remove ending variable on todos path

--- a/src/app/components/project-dashboard/project-dashboard.component.html
+++ b/src/app/components/project-dashboard/project-dashboard.component.html
@@ -16,7 +16,7 @@
         <mat-icon  aria-label="message board" matTooltip="Mesage Board">chat</mat-icon>
       </div>
     </mat-grid-tile>
-    <mat-grid-tile routerLink="/{{user?.id}}/todos/{{project.id}}/todos/{{project.todo_id}}">
+    <mat-grid-tile routerLink="/{{user?.id}}/todos/{{project.id}}/todos">
       <div class="icon-container" id="to-dos">
         <mat-grid-tile-header>To-dos</mat-grid-tile-header>
         <mat-icon aria-label="to-dos" matTooltip="To-dos">check</mat-icon>
