--- a/src/app/components/todos-list/todos-list.component.css
+++ b/src/app/components/todos-list/todos-list.component.css
@@ -8,7 +8,7 @@ p span {
   color: black;
 } */
 
-h2, h3, .drafts-container {
+h2, h3 {
   text-align: center;
 }
 
@@ -18,6 +18,10 @@ h3 span {
 
 .link {
   text-decoration: underline;
+}
+
+.todo-list-wrapper {
+  margin: 10px 0;
 }
 
 mat-list-item {
