refactor: Add routerLink to <a> tag

--- a/src/app/components/todos-list/todos-list.component.html
+++ b/src/app/components/todos-list/todos-list.component.html
@@ -8,7 +8,7 @@
       <mat-card class="todo-card">
         <mat-card-header>
           <div mat-card-avatar class="todo-header-image"><img src="http://via.placeholder.com/20x20" alt="" /></div>
-          <mat-card-title><a href="/{{user?.id}}/todos/{{project.id}}/todos/{{todo.id}}"><h3 class="link">{{todo.title}}</h3></a></mat-card-title>
+          <mat-card-title><a routerLink="/{{user?.id}}/todos/{{project.id}}/todos/{{todo.id}}"><h3 class="link">{{todo.title}}</h3></a></mat-card-title>
           <mat-card-subtitle>0/0 completed</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
