--- a/src/app/components/todo-detail/todo-detail.component.css
+++ b/src/app/components/todo-detail/todo-detail.component.css
@@ -11,8 +11,19 @@ h1 {
   margin: 0;
 }
 
-.todo-details, .user-details {
+.completed {
+  font-size: 12px;
+}
+
+.todo-details {
+  align-items: baseline;
+}
+
+.user-details {
   align-items: center;
+}
+
+.todo-details, .user-details {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   display: flex;
