refactor: Replace div with span for completed

--- a/src/app/components/todo-detail/todo-detail.component.html
+++ b/src/app/components/todo-detail/todo-detail.component.html
@@ -7,8 +7,8 @@
   <div class="todo-details">
     <h2 class="todo-title">{{todo.title}}</h2>
     <!-- <div class="todo-details"> -->
-      <div class="todo-image"><img src="http://via.placeholder.com/20x20" alt="" /></div>
-      <div class="completed">0/0 completed</div>
+    <div class="todo-image"><img src="http://via.placeholder.com/20x20" alt="" /></div>
+    <span class="completed">0/0 completed</span>
     <!-- </div> -->
   </div>
 
